[package]
name = "rust-can-dash"
version = "0.1.0"
authors = ["Myles Empty Best <myles@empty.best>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.5.4"
rand = "0.7.3" # PoC
log = "0.4"
simple_logger = "1.6.0"